# rule-forge

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml
.claude/agents/: builder.md
.claude/skills/: analyze-decision.md  analyze-package.md  check-coverage.md  detect-anomaly.md  review-rules.md  ruleforge.md  simulate-impact.md
.github/workflows/: e2e-nightly-full.yml  e2e-pr-smoke.yml  e2e-tour-nightly.yml
backend/: CLAUDE.md  pom.xml
backend/data-generator/: README.md  create_sample_template.py  main.py
backend/docker/: README.md
backend/ruleforge-console/: pom.xml
backend/ruleforge-console-app/: pom.xml
backend/ruleforge-core/: pom.xml
backend/ruleforge-executor/: pom.xml
backend/ruleforge-executor-app/: pom.xml
backend/ruleforge-parent/: pom.xml
cli/: package.json  pyproject.toml
cli/lib/: utils.ts
cli/src/ruleforge_cli/: client.py  config.py  main.py  output.py
cli/src/ruleforge_cli/commands/: file.py  package.py  project.py  rule.py  test.py  variable.py
cli/tests/: draft-cli.test.ts  rule-schema.test.ts
console-ui/: package.json  playwright.config.js  playwright.config.smoke.js  playwright.config.tour.js  vitest.setup.js
console-ui/e2e/: a11y-scan.spec.js  (+52 more)
data-generator/: pyproject.toml  requirements.txt
docker/: application-staging.yml
docs/: api.md  roadmap.md
experiments/: README.md
frontend/: nginx.conf  package.json  playwright.config.js  tailwind.config.js  webpack.config.js
model-service/: pyproject.toml
model-service/app/: config.py  main.py  schemas.py
model-service/app/models/: loader.py  registry.py
model-service/app/routes/: health.py  manage.py  predict.py
rust-ruleforge/: ARCHITECTURE.md  Cargo.toml  README.md
rust-ruleforge/crates/rf-executor/: Cargo.toml
rust-ruleforge/crates/rf-executor/src/: condition.rs  dispatch.rs  error.rs  flow_context.rs  lib.rs  next_node.rs  node_executor.rs  node_result.rs  rule_engine.rs  traverser.rs  vars.rs
rust-ruleforge/crates/rf-executor/tests/: condition_test.rs  traverser_test.rs
rust-ruleforge/crates/rf-http/: Cargo.toml
rust-ruleforge/crates/rf-http/src/: flow_def_repo.rs  lib.rs  main.rs
rust-ruleforge/crates/rf-http/src/routes/: health.rs  mod.rs
rust-ruleforge/crates/rf-ir/src/: attrs.rs  flow_definition.rs  flow_node.rs  ir_error.rs  lib.rs  node_kind.rs  sequence_flow.rs
rust-ruleforge/crates/rf-parse/: Cargo.toml
rust-ruleforge/crates/rf-parse/src/: bpmn_parser.rs  lib.rs
rust-ruleforge/crates/rf-parse/tests/: parser_test.rs
rust-ruleforge/crates/rf-rule/: Cargo.toml
rust-ruleforge/crates/rf-rule/src/: mock.rs
rust-ruleforge/crates/rf-state/: Cargo.toml
rust-ruleforge/crates/rf-state/src/: lib.rs  persistence.rs  recovery.rs  serialization.rs  state_row.rs
scripts/: build-images.sh  clickhouse-init.sql  start-all.sh  start-backend.sh  start-console.sh  start-executor.sh
server/: Dockerfile.console  Dockerfile.executor  pom.xml
(+917 files in other folders)
