[project]
name = "ruleforge-cli"
version = "0.1.0"
description = "CLI tool for RuleForge rule engine management and testing"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13",
]

[project.scripts]
rf = "ruleforge_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
