[project]
name = "ruleforge-model-service"
version = "0.1.0"
description = "RuleForge model prediction service — loads PKL models and serves predictions via REST API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "numpy>=2.0",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.28", "pytest-asyncio>=0.24"]
