[package]
name = "rf-executor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Decision flow executor — Traverser type-state + NodeExecutor dispatch"

[dependencies]
rf-ir = { path = "../rf-ir" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
rhai = { workspace = true }
